--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
   "dependencies": {
-    "gulp": "^4.0.2"
+    "autoprefixer": "^10.4.2",
+    "gulp": "^4.0.2",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-minify-html-literals": "^1.1.22"
+  },
+  "devDependencies": {
+    "clean-css": "^5.2.4",
+    "gulp-autoprefixer": "^8.0.0",
+    "gulp-clean-css": "^4.3.0"
   }
 }
