--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "autoprefixer": "^10.4.2",
     "gulp": "^4.0.2",
     "gulp-htmlmin": "^5.0.1",
-    "gulp-minify-html-literals": "^1.1.22"
+    "gulp-minify-html-literals": "^1.1.22",
+    "jquery": "^3.6.0"
   },
   "devDependencies": {
     "clean-css": "^5.2.4",
